# simple-imaging

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml-a  .readthedocs.yml  Pipfile  README.md  main.py  notes-2020-05-03.md  pre-commit-config.yaml  pytest.ini  requirements-dev.txt  setup.cfg  setup.cfg-2
.github/workflows/: pyhon-packaging.yml
docs/source/: conf.py  index.rst
hw01/: .gitignore  hw_01.py
simple_imaging/: __init__.py  errors.py  image.py  matrix.py  types.py  utils.py
simple_matrix/: image.py  matrix.py  utils.py
tests/: fixtures.py  test_image.py  test_matrix.py  test_pixel.py  test_utils.py  test_validations.py
