[metadata]
name = simple-imaging
version = 0.1.1
description = a simple image processing library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deadpyxel/digital-image-processing
author = deadpyxel
author_email = ghost0092@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7

[bumpversion]
current_version = 0.1.1

[flake8]
select = B,B9,BLK,C,E,F,I,W
ignore = E203,E501,W503
max-line-length = 80

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
files = simple_imaging,tests
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[pytest]
python_files = tests.py test_*.py *_tests.py tests/test_*.py
